--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Epic Website</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>hello</h1>
-    <h1>wolrd</h1>
+    <div class="hero">
+      <div class="overlay">
+        <h1 class="glow">Hello</h1>
+        <h1 class="glow">World</h1>
+        <p class="subtitle">Welcome to the most epic site you've ever seen.</p>
+        <button class="cta">Let's Go</button>
+      </div>
+    </div>
   </body>
 </html>
