--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <div class="hero">
       <div class="overlay">
-        <h1 class="glow">Hello</h1>
-        <h1 class="glow">World</h1>
-        <p class="subtitle">Welcome to the most epic site you've ever seen.</p>
-        <button class="cta">Let's Go</button>
+        <h1 class="glow">RAIDENS TITS ARE HUGE</h1>
+        <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
+        <p class ="subtitle">KASSADIN BEST CHAMPION</p>
+        <p class ="subtitle">JIRO IS A FRAUD</p>
+        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Let's Go</a>
       </div>
     </div>
   </body>
