--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Epic Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>My Projects</title>
+    <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar">
-        <a href="index.html">Home</a>
-        <a href="./pages/about.html">About</a>
-        <a href="./pages/projects.html">Projects</a>
-        <a href="./pages/contact.html">Contact</a>
+        <a href="../index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./projects.html">Projects</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     <div class="hero">
       <div class="overlay">
-        <h1 class="glow">RAIDENS TITS ARE HUGE</h1>
-        <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
+        <h1 class="glow">PROJECTS</h1>
+        <!-- <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
         <p class ="subtitle">KASSADIN BEST CHAMPION</p>
         <p class ="subtitle">JIRO IS A FRAUD</p>
-        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Let's Go</a>
+        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Let's Go</a> -->
       </div>
     </div>
   </body>
