--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Epic Website</title>
+    <title>idot Official Website</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   </head>
@@ -16,11 +16,11 @@
       </nav>
     <div class="hero">
       <div class="overlay">
-        <h1 class="glow">RAIDENS TITS ARE HUGE</h1>
+        <h1 class="glow">idot Rank 1 Kassadin NA</h1>
         <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
         <p class ="subtitle">KASSADIN BEST CHAMPION</p>
         <p class ="subtitle">JIRO IS A FRAUD</p>
-        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Let's Go</a>
+        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Peak Button</a>
       </div>
     </div>
   </body>
