splash art changes

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
     <link rel="stylesheet" href="../style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar">
@@ -14,9 +14,10 @@
         <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    <div class="hero">
+    <div class="hero" style=" background: url('https://oyster.ignimgs.com/mediawiki/apis.ign.com/league-of-legends/c/c1/Kassadin_lol.jpg') no-repeat center center/cover;">
       <div class="overlay">
         <h1 class="glow">ABOUT</h1>
+        <p class="subtitle">I'm a sigma male Kassadin main 185cm 85kg  </p>
         <!-- <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
         <p class ="subtitle">KASSADIN BEST CHAMPION</p>
         <p class ="subtitle">JIRO IS A FRAUD</p>
