--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
     <link rel="stylesheet" href="../style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar">
@@ -14,13 +14,14 @@
         <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    <div class="hero">
+    <div class="hero" style=" background: url('https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Kassadin_0.jpg') no-repeat center center/cover;">
       <div class="overlay">
         <h1 class="glow">CONTACT</h1>
-        <!-- <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
-        <p class ="subtitle">KASSADIN BEST CHAMPION</p>
-        <p class ="subtitle">JIRO IS A FRAUD</p>
-        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Let's Go</a> -->
+        <p class ="subtitle">Discord: @idot716</p>
+        <p class ="subtitle">Twitter: @idot716</p>
+        <a href="https://myanimelist.net/profile/SLiTMYWRiSTSxDDD"><p class ="subtitle">MAL: SLiTMYWRiSTSxDDD </p></a>
+        <a href="https://www.op.gg/summoners/na/idot-716"><p class ="subtitle">op.gg: idot#716 </p></a>
+    
       </div>
     </div>
   </body>
