--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Projects</title>
     <link rel="stylesheet" href="../style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar" >
         <a href="../index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    <div class="hero">
+    <div class="hero" style=" background: url('https://68.media.tumblr.com/02fc55711a5b702cc19b795f59db99cc/tumblr_oomkjb96h41vkl1qxo1_1280.jpg') no-repeat center center/cover;">
       <div class="overlay">
         <h1 class="glow">PROJECTS</h1>
-        <!-- <p class="subtitle">RAIDEN SHOGUN IS MY WIFE</p>
-        <p class ="subtitle">KASSADIN BEST CHAMPION</p>
-        <p class ="subtitle">JIRO IS A FRAUD</p>
-        <a class="cta" href="https://www.youtube.com/watch?v=mvrW4aKwAXw" target="_blank">Let's Go</a> -->
+        <p class ="subtitle">This Website</p>
       </div>
     </div>
   </body>
