--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,11 +14,13 @@
         <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    <div class="hero" style=" background: url('https://68.media.tumblr.com/02fc55711a5b702cc19b795f59db99cc/tumblr_oomkjb96h41vkl1qxo1_1280.jpg') no-repeat center center/cover;">
+    <div class="hero" style=" background: url('https://i1.sndcdn.com/artworks-tETsoGp3q2NqGfPu-bqoEdw-t1080x1080.jpg') no-repeat center center/cover;">
       <div class="overlay">
         <h1 class="glow">PROJECTS</h1>
         <p class ="subtitle">This Website</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/URNZaNTYmNw?si=tG8YB8f2YJD4LcuK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
+
     </div>
   </body>
 </html>
