--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,6 +19,7 @@
         <h1 class="glow">CONTACT</h1>
         <p class ="subtitle">Discord: @idot716</p>
         <p class ="subtitle">Twitter: @idot716</p>
+        <p class ="subtitle"> Genshin UID: 647351154</p>
         <a href="https://myanimelist.net/profile/SLiTMYWRiSTSxDDD"><p class ="subtitle">MAL: SLiTMYWRiSTSxDDD </p></a>
         <a href="https://www.op.gg/summoners/na/idot-716"><p class ="subtitle">op.gg: idot#716 </p></a>
     
